update the postgresql-42.7.5.jar and junit test lib in Donkey module